--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp clean && gulp build"
   },
+  "keywords": [
+    "Animate Display Property"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bilalshareef/animate-display-property.git"
   },
-  "author": "Mohammed Bilal Shareef",
+  "author": "Mohammed Bilal Shareef <bilalshareef.h@gmail.com> (https://bilalshareef.github.io)",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/bilalshareef/animate-display-property/issues"
