--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "build": "gulp clean && gulp build"
   },
   "keywords": [
-    "Animate Display Property"
+    "Animate Display Property",
+    "CSS display transitions",
+    "CSS transition effects",
+    "CSS animation effects",
+    "animation effects",
+    "transition effects",
+    "animations",
+    "transitions"
   ],
   "repository": {
     "type": "git",
@@ -19,7 +26,7 @@
   "bugs": {
     "url": "https://github.com/bilalshareef/animate-display-property/issues"
   },
-  "homepage": "https://github.com/bilalshareef/animate-display-property#readme",
+  "homepage": "https://bilalshareef.github.io/animate-display-property/",
   "devDependencies": {
     "del": "^3.0.0",
     "gulp": "^3.9.1",
