--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "gulp test",
     "test:dist": "gulp test:dist",
+    "lint": "eslint src",
     "build": "gulp copy && gulp concat-css && gulp minify",
     "clean": "gulp clean",
     "clean-build": "npm run clean && npm run build"
@@ -33,6 +34,7 @@
   "devDependencies": {
     "browser-sync": "^2.26.14",
     "del": "^3.0.0",
+    "eslint": "^7.32.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.2.2",
