--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "gulp test",
     "test:dist": "gulp test:dist",
     "lint": "eslint src",
+    "lint-fix": "eslint src --fix",
     "build": "gulp copy && gulp concat-css && gulp minify",
     "clean": "gulp clean",
     "clean-build": "npm run clean && npm run build"
