Added more ES Lint rules. Also, hooked eslint script with build script.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,10 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        "no-trailing-spaces": "error",
+        "space-before-blocks": "error",
+        "keyword-spacing": "error",
+        "arrow-spacing": "error"
     }
 }
